[gd_scene load_steps=32 format=3 uid="uid://rmhrq5qmmkuj"]

[ext_resource type="Script" path="res://player.gd" id="1_cqcfi"]
[ext_resource type="Texture2D" uid="uid://bkagmxvxuyrog" path="res://handplaceholder.png" id="1_ia0tg"]
[ext_resource type="Texture2D" uid="uid://crxtxvqqawptj" path="res://hand sprites/hand spritesheet.png" id="3_ilttr"]
[ext_resource type="AudioStream" uid="uid://dc5t8mmfgqdrw" path="res://catgrab.mp3" id="3_q1y1w"]
[ext_resource type="Texture2D" uid="uid://5u4c6nje1sed" path="res://hand sprites/leg spritesheet.png" id="3_vc4r5"]
[ext_resource type="AudioStream" uid="uid://dnxckqfjxxfij" path="res://cat kicker sfx/kick1.wav" id="4_7sibd"]
[ext_resource type="AudioStream" uid="uid://bedrb2maj857f" path="res://cat kicker sfx/kick2.wav" id="5_mtp5c"]
[ext_resource type="FontFile" uid="uid://dxdv0uyd0elyf" path="res://Cattino.ttf" id="5_xcwns"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_xgkp0"]

[sub_resource type="BoxShape3D" id="BoxShape3D_p660o"]

[sub_resource type="Animation" id="Animation_qb8pt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(144, 405.333)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_4avm8"]
resource_name = "kick"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.2, 0.366667),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(144, 374.178), Vector2(144, -60), Vector2(144, -60), Vector2(144, 374.178)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_83oya"]
_data = {
"RESET": SubResource("Animation_qb8pt"),
"kick": SubResource("Animation_4avm8")
}

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_xyk1u"]
playback_mode = 1
random_pitch = 9.17
random_volume_offset_db = 13.33
streams_count = 2
stream_0/stream = ExtResource("4_7sibd")
stream_1/stream = ExtResource("5_mtp5c")

[sub_resource type="AtlasTexture" id="AtlasTexture_gnh80"]
atlas = ExtResource("1_ia0tg")
region = Rect2(415, 0, 415, 438)

[sub_resource type="AtlasTexture" id="AtlasTexture_srdd3"]
atlas = ExtResource("1_ia0tg")
region = Rect2(830, 0, 415, 438)

[sub_resource type="AtlasTexture" id="AtlasTexture_mu7kt"]
atlas = ExtResource("1_ia0tg")
region = Rect2(1245, 0, 415, 438)

[sub_resource type="AtlasTexture" id="AtlasTexture_l8fxj"]
atlas = ExtResource("1_ia0tg")
region = Rect2(0, 0, 415, 438)

[sub_resource type="AtlasTexture" id="AtlasTexture_sljq1"]
atlas = ExtResource("1_ia0tg")
region = Rect2(0, 0, 415, 438)

[sub_resource type="AtlasTexture" id="AtlasTexture_4wgca"]
atlas = ExtResource("1_ia0tg")
region = Rect2(1245, 0, 415, 438)

[sub_resource type="SpriteFrames" id="SpriteFrames_klnha"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gnh80")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_srdd3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mu7kt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l8fxj")
}],
"loop": false,
"name": &"grab",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sljq1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4wgca")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_ohaq6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HUD/hands/right hand:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HUD/hands/right hand:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(505, -107)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HUD/hands/right hand:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HUD/hands/left hand:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-541, 229)]
}

[sub_resource type="Animation" id="Animation_14304"]
resource_name = "charge_throw"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HUD/hands/right hand:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HUD/hands/right hand:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(505, -107), Vector2(952, -278)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HUD/hands/left hand:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.966667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-541, 229), Vector2(-527, -313)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HUD/hands/right hand:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 0,
"values": []
}

[sub_resource type="Animation" id="Animation_7tno0"]
resource_name = "idle_cat"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HUD/hands/right hand:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HUD/hands/right hand:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 0,
"values": []
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HUD/hands/left hand:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 0,
"values": []
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HUD/hands/right hand:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_onvj7"]
resource_name = "idle_empty"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HUD/hands/right hand:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [1, 2]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HUD/hands/right hand:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(505, -107)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HUD/hands/left hand:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-541, 229)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HUD/hands/right hand:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_6wnep"]
resource_name = "pickup"
length = 0.3915
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HUD/hands/right hand:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HUD/hands/right hand:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.166667, 0.366667),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(505, -107), Vector2(844, -275), Vector2(-58, 256), Vector2(505, -107)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HUD/hands/right hand:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.266667, 0.366667),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.584685, -0.696386, 0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HUD/hands/left hand:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-541, 229)]
}

[sub_resource type="Animation" id="Animation_jwp61"]
resource_name = "pickup_whiff"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HUD/hands/right hand:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.133333, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [2, 3, 2]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HUD/hands/right hand:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.2, 0.433333),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(505, -107), Vector2(833, -193), Vector2(-58, 256), Vector2(505, -107)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HUD/hands/right hand:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.3, 0.433333),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.584685, -0.696386, 0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HUD/hands/left hand:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-541, 229)]
}

[sub_resource type="Animation" id="Animation_ccqeo"]
resource_name = "throw"
length = 0.4925
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HUD/hands/right hand:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [3, 2]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HUD/hands/right hand:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.133333, 0.3, 0.466667),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(855, -402), Vector2(-60, 195), Vector2(326, 201), Vector2(505, -107)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HUD/hands/left hand:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.0666667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-550, -216), Vector2(-930, -78)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HUD/hands/right hand:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.133333, 0.466667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.418879, -0.656244, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_drks6"]
_data = {
"RESET": SubResource("Animation_ohaq6"),
"charge_throw": SubResource("Animation_14304"),
"idle_cat": SubResource("Animation_7tno0"),
"idle_empty": SubResource("Animation_onvj7"),
"pickup": SubResource("Animation_6wnep"),
"pickup_whiff": SubResource("Animation_jwp61"),
"throw": SubResource("Animation_ccqeo")
}

[sub_resource type="LabelSettings" id="LabelSettings_48a5a"]
font = ExtResource("5_xcwns")
font_size = 65
outline_size = 8
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_3qi50"]
font = ExtResource("5_xcwns")
font_size = 50
outline_size = 8
outline_color = Color(0, 0, 0, 1)

[node name="Player" type="CharacterBody3D" groups=["player"]]
collision_layer = 2
collision_mask = 3
script = ExtResource("1_cqcfi")

[node name="Face" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)

[node name="RayCast3D" type="RayCast3D" parent="Face"]
target_position = Vector3(0, 0, -3)
collision_mask = 4

[node name="Camera3D" type="Camera3D" parent="Face"]
fov = 100.7

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_xgkp0")

[node name="ShapeCast3D" type="ShapeCast3D" parent="."]
transform = Transform3D(2, 0, 0, 0, 1, 0, 0, 0, 1.5, 0, 1.5, -0.75)
shape = SubResource("BoxShape3D_p660o")
collision_mask = 4

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HUD" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="hands" type="Control" parent="CanvasLayer/HUD"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(1.5, 1.5)

[node name="right hand" type="Sprite2D" parent="CanvasLayer/HUD/hands"]
position = Vector2(505, -107)
scale = Vector2(0.265734, 0.265734)
texture = ExtResource("3_ilttr")
hframes = 5
frame = 1

[node name="left hand" type="Sprite2D" parent="CanvasLayer/HUD/hands"]
position = Vector2(-541, 229)
rotation = 0.218166
scale = Vector2(0.265734, 0.265734)
texture = ExtResource("3_ilttr")
hframes = 5

[node name="leg" type="Sprite2D" parent="CanvasLayer/HUD/hands"]
position = Vector2(144, 405.333)
scale = Vector2(0.160911, 0.160911)
texture = ExtResource("3_vc4r5")
hframes = 2

[node name="legPlayer" type="AnimationPlayer" parent="CanvasLayer/HUD/hands/leg"]
libraries = {
"": SubResource("AnimationLibrary_83oya")
}

[node name="kickSounds" type="AudioStreamPlayer" parent="CanvasLayer/HUD/hands/leg"]
stream = SubResource("AudioStreamRandomizer_xyk1u")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="CanvasLayer/HUD"]
position = Vector2(960, 540)
scale = Vector2(0.02, 0.02)
sprite_frames = SubResource("SpriteFrames_klnha")
animation = &"grab"
autoplay = "idle"

[node name="handPlayer" type="AnimationPlayer" parent="CanvasLayer/HUD"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_drks6")
}

[node name="Panel" type="Panel" parent="CanvasLayer/HUD"]
layout_mode = 0
offset_left = 1437.0
offset_right = 1920.0
offset_bottom = 437.0

[node name="ScoreHeader" type="Label" parent="CanvasLayer/HUD/Panel"]
layout_mode = 0
offset_right = 483.0
offset_bottom = 69.0
text = "Score"
label_settings = SubResource("LabelSettings_48a5a")
horizontal_alignment = 1

[node name="ScoreMessage" type="Label" parent="CanvasLayer/HUD/Panel"]
layout_mode = 0
offset_top = 69.0
offset_right = 483.0
offset_bottom = 384.0
label_settings = SubResource("LabelSettings_3qi50")
horizontal_alignment = 1

[node name="ScoreValue" type="Label" parent="CanvasLayer/HUD/Panel"]
layout_mode = 0
offset_left = 2.0
offset_top = 361.0
offset_right = 485.0
offset_bottom = 430.0
label_settings = SubResource("LabelSettings_48a5a")
horizontal_alignment = 1

[node name="FailScreen" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="CanvasLayer/FailScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -114.5
offset_top = -58.0
offset_right = 114.5
offset_bottom = 58.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="CanvasLayer/FailScreen/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.5
offset_top = -11.5
offset_right = 128.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "you suck abnd are toollol slowllol"

[node name="Button" type="Button" parent="CanvasLayer/FailScreen/Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -4.0
offset_top = -8.0
offset_right = 4.0
grow_horizontal = 2
grow_vertical = 0
text = "restart"

[node name="CatGrabSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_q1y1w")
bus = &"Sfx"

[connection signal="animation_finished" from="CanvasLayer/HUD/hands/leg/legPlayer" to="." method="_on_leg_player_animation_finished"]
[connection signal="animation_finished" from="CanvasLayer/HUD/handPlayer" to="." method="_on_animation_player_animation_finished"]
